--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Este app foi desenvolvido na Semana Spring React"
     />
     <title>DSVendas</title>
   </head>
